# whoop

./: .gitignore  LICENSE.TXT  README.md  Vagrantfile  findtools.py  tester.py  whoop.py  whoop.sln
FrontEndPlugin/src/: CMakeLists.txt  chauffeur.cpp
Model/: whoop_decl.bpl
Model/asm/: barrier.h  idals.h
Model/linux/: blkdev.h  compiler.h  dcache.h  delay.h  device.h  dma-mapping.h  errno.h  etherdevice.h  fb.h  fd.h  fs.h  genhd.h  gfp.h  if_vlan.h  init.h  input.h  ioctl.h  kernel.h  list.h  mm.h  mod_devicetable.h  module.h  mutex.h  netdevice.h  pagemap.h  pci.h  platform_device.h  sched.h  seqlock.h  signal.h  skbuff.h  slab.h  socket.h  spinlock.h  spinlock_types.h  stat.h  thread_info.h  time.h  tty.h  types.h  (+4 more)
Scripts/: findtools.dev.py
Scripts/Vagrant/: bootstrap.sh  findtools.vagrant.py
Source/CoreLib/: AccessType.cs  AnalysisContext.cs  Outcome.cs  SourceLocationInfo.cs  WhoopCommandLineOptions.cs  WhoopCoreLib.csproj  WhoopProgram.cs  WhoopProgramParser.cs
Source/CoreLib/Enumerations/: FunctionPairingMethod.cs
Source/CoreLib/Regions/: AsyncFuncRegion.cs  CheckerRegion.cs  IRegion.cs  LocksetAnalysisRegion.cs  LoggerRegion.cs  LoopAnalysisRegion.cs
Source/CoreLib/StaticLocksetAnalysis/: ExprModifier.cs  Factory.cs  IErrorReportingInstrumentation.cs  IRaceInstrumentation.cs  Lock.cs  Lockset.cs  ModelCleaner.cs  PointerAliasAnalysis.cs  SharedStateAnalyser.cs
Source/CoreLib/Util/: AnalysisContextParser.cs  FunctionPairingUtil.cs  IO.cs  PairConverterUtil.cs  RaceInstrumentationUtil.cs  WhoopProgramParser.cs
Source/CoreLib/Utilities/: AnalysisContextParser.cs  ExprModifier.cs  IO.cs  PairConverterUtil.cs  RaceInstrumentationUtil.cs  Util.cs
Source/Cruncher/: Cruncher.csproj  EntryPointInliner.cs  InvariantInferrer.cs  Program.cs  WhoopCruncherCommandLineOptions.cs
Source/Driver/: Driver.csproj  DriverCommandLineOptions.cs  Program.cs  StaticLocksetAnalyser.cs  Whoop.Driver.csproj  WhoopDriver.cs  WhoopDriver.csproj  WhoopDriverCommandLineOptions.cs  WhoopErrorReporter.cs
Source/Engine/: Engine.csproj  EngineCommandLineOptions.cs  EngineMode.cs  InstrumentationEngine.cs  PairWiseCheckingInstrumentationEngine.cs  ParsingEngine.cs  Program.cs  StaticLocksetAnalysisInstrumentationEngine.cs  SummaryGenerationEngine.cs  WatchdogAnalysisEngine.cs  WhoopEngine.cs  WhoopEngine.csproj  WhoopEngineCommandLineOptions.cs
Source/Instrumentation/: Whoop.Instrumentation.csproj
Source/Instrumentor/: InstrumentationCommandLineOptions.cs  InstrumentationEngine.cs  Instrumentor.csproj  Program.cs  WhoopEngine.cs
Source/Parser/: Parser.csproj  ParsingEngine.cs  Program.cs  WhoopEngine.cs
Source/Parsing/: ParsingCommandLineOptions.cs  Whoop.Parsing.csproj  WhoopEngine.cs
Source/RaceChecker/: ErrorReporter.cs  Program.cs  RaceChecker.csproj  StaticLocksetAnalyser.cs  WhoopErrorReporter.cs  WhoopRaceCheckerCommandLineOptions.cs  YieldInstrumentationEngine.cs
Source/Util/: IO.cs  Util.cs  WhoopCommandLineOptions.cs  WhoopUtil.csproj
Source/Whoop/: AnalysisContext.cs  CallGraph.cs  Lock.cs  Lockset.cs  MemoryLocation.cs  ModelCleaner.cs  SourceLocationInfo.cs  Whoop.csproj  WhoopCommandLineOptions.cs
Source/Whoop/Analysis/: DataFlowAnalyser.cs  Factory.cs  ModelCleaner.cs  PointerAliasAnalyser.cs  PointerArithmeticAnalyser.cs  SharedStateAnalyser.cs
Source/Whoop/Core/: AnalysisContext.cs  ErrorReporter.cs  Graph.cs  IPass.cs  Lock.cs  Lockset.cs  Mode.cs  SourceLocationInfo.cs
Source/Whoop/Enumerations/: AnalysisRole.cs  FunctionPairingMethod.cs
Source/Whoop/IO/: BoogieProgramEmitter.cs  Reporter.cs
Source/Whoop/Instrumentation/: Factory.cs
Source/Whoop/Refactoring/: Factory.cs  ProgramSlicing.cs  ReadWriteSlicing.cs
Source/Whoop/Regions/: IRegion.cs  InstrumentationRegion.cs  LocksetAnalysisRegion.cs  PairCheckingRegion.cs
Source/Whoop/SLA/: Factory.cs  Lockset.cs  MemoryLocation.cs  PointerAliasAnalysis.cs
Source/Whoop/Summarisation/: Factory.cs  SummaryGeneration.cs  SummaryInformationParser.cs
Source/Whoop/Utilities/: AnalysisContextParser.cs  ExecutionTimer.cs  ExprModifier.cs  IO.cs  PairConverterUtil.cs  RaceInstrumentationUtil.cs  Utilities.cs  WhoopCommandLineOptions.cs
driversuite/: r8169.c
driversuite/block/gdrom/: driver.c
driversuite/block/ps3vram/: driver.c
driversuite/block/swim/: driver.c
driversuite/block/sx8/: driver.c
driversuite/char/applicom/: driver.c
driversuite/char/ds1286/: driver.c  ds1286.h
driversuite/char/dtlk/: driver.c
driversuite/char/efirtc/: driver.c  efi.h
driversuite/char/fs3270/: driver.c  raw3270.h
driversuite/char/generic_nvram/: driver.c
driversuite/char/mbcs/: driver.c  mbcs.h
driversuite/char/pc8736x_gpio/: driver.c
driversuite/char/sonypi/: driver.c
driversuite/fs/minix/: inode.c  lcdlib.c  minix.h
driversuite/usb/appledisplay/: driver.c
driversuite/usb/ssu100/: driver.c
driversuite/watchdog/machzwd/: driver.c
headers/: whoop.h
headers/asm/: bitsperlong.h  io.h  processor.h
headers/linux/: bitrev.h  compiler.h  device.h  errno.h  etherdevice.h  ethtool.h  firmware.h  if_vlan.h  interrupt.h  ioctl.h  ioport.h  kernel.h  mii.h  mm_types.h  mod_devicetable.h  module.h  netdevice.h  pci.h  pm.h  pm_runtime.h  posix_types.h  rtnetlink.h  sched.h  seqlock.h  skbuff.h  slab.h  socket.h  spinlock.h  string.h  time.h  timer.h  types.h  u64_stats_sync.h  workqueue.h
scripts/vagrant/: bootstrap.sh  findtools.py
testsuite/: baseline.pickle
testsuite/basic_locks/lock_unlock/: test.c
testsuite/basic_loops_with_locks/lock_unlock_inside_loop/: test.c
testsuite/containers/: test.c
testsuite/deadlocks/two_entry_points_one_lock/: test.c
testsuite/deadlocks/two_entry_points_two_locks/: test.c
testsuite/deadlocks/two_locks/: test.c
testsuite/locks_with_if/case1/: test.c
testsuite/locks_with_if/case2/: test.c
testsuite/multiple_locks/two_locks/: .re.c
testsuite/multiple_resources_races/case_1/: test.c
testsuite/multiple_resources_races/case_2/: test.c
testsuite/no_access/: test.c
testsuite/no_duplicate_pairs/: test.c
(+143 files in other folders)
